# rust-xs-test

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  main.rs  tasks.rs
xscommand/: Cargo.toml
xscommand/macros/: Cargo.toml
xscommand/macros/src/: lib.rs
xscommand/src/: busybox.rs  emu.rs  git.rs  just.rs  lib.rs  make.rs  numactl.rs
