[package]
name = "rust-xs-test"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xscommand = { path = "xscommand" }
simple_logger = "1.11.0"
log = "0.4"
threadpool = "1.0"
thread-id = "3.3.0"
chrono = "0.4"
psutil = "3.2.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
walkdir = "2.3.1"
rand = "0.8.0"
