[package]
name = "macros"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
xscommand = { path = ".." }


[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]